# mandible

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
mandible/: h5_parser.py  jsonpath.py  log.py
mandible/cumulus/: move_granules.py
mandible/cumulus/ingest/: granule.py  url_path_template.py
mandible/internal/: __init__.py  types.py
mandible/metadata_mapper/: __init__.py  builder.py  context.py  directive.py  exception.py  format.py  key.py  mapper.py  source.py  source_provider.py  storage.py  types.py
mandible/metadata_mapper/directive/: __init__.py  directive.py  mapped.py  operations.py  reformatted.py
mandible/metadata_mapper/format/: __init__.py  format.py  h5.py  placeholder.py  xml.py
mandible/metadata_mapper/storage/: __init__.py  cmr_query.py  http_request.py  placeholder.py  s3file.py  storage.py
mandible/umm/: error.py  granule.py  ummg.py  ummg_types.py
mandible/umm_classes/: __init__.py  base.py  factory.py  related_url_builder.py  types.py
mandible/umm_generator/: base.py  umm_g.py
mandible/ummg/: granule.py
tests/: conftest.py  test_builder.py  test_context.py  test_directives.py  test_format.py  test_h5.py  test_h5_parser.py  test_jsonpath.py  test_log.py  test_metadata_mapper.py  test_related_url_builder.py  test_source.py  test_source_provider.py  test_storage.py  test_umm_generator.py  test_ummg.py
tests/cumulus/: conftest.py  test_granule.py  test_move_granules.py  test_url_path_template.py
tests/data/: example.json  example.json.bz2  example.xml  fixed_name_file.json  fixed_xml_file.xml  local_file.txt  match_me.json  xml_with_namespace.xml
tests/integration_tests/: conftest.py  test_builder.py  test_directives.py  test_full_example.py  test_metadata_mapper.py  test_umm_classes.py
