[tool.poetry]
name = "mandible"
version = "0.5.0"
description = "A generic framework for writing satellite data ingest systems"
authors = ["Rohan Weeden <reweeden@alaska.edu>", "Matt Perry <mperry37@alaska.edu>"]
license = "APACHE-2"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.8"

# Required
s3fs = "^0.4.2"

# Optional
h5py = { version = "^3.6.0", optional = true }
jsonpath-ng = { version = "^1.4.0", optional = true }
lxml = { version = "^4.9.2", optional = true }
numpy = { version = "^1.21.6", optional = true }

[tool.poetry.extras]
all = ["h5py", "numpy", "jsonpath-ng", "lxml"]
h5 = ["h5py", "numpy"]
jsonpath = ["jsonpath-ng"]
xml = ["lxml"]


[tool.poetry.group.dev.dependencies]
boto3 = "^1.18"
moto = "^4.0.1"
pytest = "^8.0.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.8.2"


[tool.pytest.ini_options]
markers = [
    "h5: requires the 'h5' extra to be installed",
    "jsonpath: requires the 'jsonpath' extra to be installed",
    "xml: requires the 'xml' extra to be installed",
]

[tool.isort]
profile = "black"
