[tool.poetry]
name = "mandible"
version = "0.10.0"
description = "A generic framework for writing satellite data ingest systems"
authors = ["Rohan Weeden <reweeden@alaska.edu>", "Matt Perry <mperry37@alaska.edu>"]
license = "APACHE-2"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.9"

# Required
typing-extensions = "^4.12.2"

# Optional
h5py = { version = "^3.6.0", optional = true }
jsonpath-ng = { version = "^1.4.0", optional = true }
lxml = { version = "^4.9.2", optional = true }
# Numpy is pinned to a minimum version by h5py. Unpinning here means our
# requirements will always match those of h5py.
numpy = { version = "*", optional = true }
requests = { version = "^2.32.3", optional = true }
s3fs = { version = ">=0.4.2", optional = true }

[tool.poetry.extras]
all = ["h5py", "numpy", "requests", "jsonpath-ng", "s3fs", "lxml"]
h5 = ["h5py", "numpy"]
http = ["requests"]
jsonpath = ["jsonpath-ng"]
s3 = ["s3fs"]
xml = ["lxml"]


[tool.poetry.group.dev.dependencies]
boto3 = "^1.18"
moto = "^5.0.0"
pytest = "^8.0.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.8.2"

[tool.poetry.group.mypy.dependencies]
lxml-stubs = "^0.5.1"
mypy = "^1.14.1"
types-requests = "<2.31.0.7"


[tool.pytest.ini_options]
markers = [
    "h5: requires the 'h5' extra to be installed",
    "http: requires the 'http' extra to be installed",
    "jsonpath: requires the 'jsonpath' extra to be installed",
    "s3: requires the 's3' extra to be installed",
    "xml: requires the 'xml' extra to be installed",
]

[tool.isort]
profile = "black"
